force-app/main/default/objects/nFORCE__Answer__c/nFORCE__Answer__c.object-meta.xml
<CustomObject>
    <description>This object stores the value of the user&apos;s questionnaire responses.</description>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>