force-app/main/default/objects/nFORCE__Answer__c/fields/cm_Answer__c.field-meta.xml
<CustomField>
    <fullName>cm_Answer__c</fullName>
    <formula>nFORCE__Option__r.nFORCE__Label__c</formula>
    <label>Answer</label>
    <type>Text</type>
</CustomField>