force-app/main/default/objects/nFORCE__Answer__c/fields/cm_Question__c.field-meta.xml
<CustomField>
    <fullName>cm_Question__c</fullName>
    <description>The question that the answer relates to.</description>
    <formula>nFORCE__Question__r.nFORCE__Label__c</formula>
    <label>Question</label>
    <type>Text</type>
</CustomField>