force-app/main/default/objects/nFORCE__Answer__c/fields/LLC_BI__Contact__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It automatically populates. It relates an answer to a contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>