force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Answer__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Answer__c</fullName>
    <description>This field is not required and is automatically populated when answering a question in the questionnaire. It stores the plain text answer a user provided for the associated question.</description>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>