force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Archived_Date__c</fullName>
    <description>This field should be manually populated when nForce__Is_Archived__c is enabled. It stores the date in which the answer was archived.</description>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>