force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context_Id__c</fullName>
    <description>This field is required. It automatically populates. It is the ID record that the answer relates to.</description>
    <label>Context Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>