force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Context_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context_Owner_Id__c</fullName>
    <description>This field is required. It automatically populates. It is a soft reference to the record owner in context.</description>
    <label>Context Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>