force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Group__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required and is automatically populated when answering a question in the questionnaire. This field specifies the question group this answer is associated with.</description>
    <label>Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>