force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Number_Answer__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Number_Answer__c</fullName>
    <description>Users populate this optional number field for Questionnaire questions that need a number value as the answer. By default, it is blank.</description>
    <inlineHelpText>Enter the numeric value for this configurable questionnaire field.</inlineHelpText>
    <label>Number Answer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>