force-app/main/default/objects/nFORCE__Answer__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>nFORCE__Group__c</columns>
    <columns>NAME</columns>
    <columns>nFORCE__Label__c</columns>
    <columns>nFORCE__Context_Id__c</columns>
    <columns>nFORCE__Context_Owner_Id__c</columns>
    <columns>nFORCE__Option__c</columns>
    <columns>nFORCE__Question__c</columns>
    <columns>nFORCE__Is_Archived__c</columns>
    <columns>nFORCE__Archived_Date__c</columns>
    <columns>LLC_BI__Account__c</columns>
    <columns>LLC_BI__Contact__c</columns>
    <columns>LLC_BI__Deposit__c</columns>
    <columns>LLC_BI__Loan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>